2010-08-17  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (prepare_dynamic_module): better comment placement
	in reqfile

2010-08-16  Sam Steingold  <sds@gnu.org>

	fix 2010-07-09 ${DESTDIR} patch which broke "make install DESTDIR=...":
	only respect DESTDIR in "install", not in "add" mode
	* clisp-link.in (try_set_LIBDIR): extract from ...
	(set_dynamic_module_location): use try_set_LIBDIR;
	accept DESTDIR as an argument
	(prepare_dynamic_module): accept DESTDIR as an argument
	(add): pass "" as the DESTDIR to prepare_dynamic_module
	(install): pass DESTDIR as DESTDIR to prepare_dynamic_module

2010-08-16  Sam Steingold  <sds@gnu.org>

	* clisp-link.in: revert the 2010-07-09 ${DESTDIR} patch because it
	breaks "make install DESTDIR=..."

2010-08-13  Sam Steingold  <sds@gnu.org>

	* type.lisp (typep-number-test, c-typep-number): reuse error string
	* init.lisp: use reader (#1#) instead of let for the list of
	exported MOP symbols

2010-08-09  Sam Steingold  <sds@gnu.org>

	* condition.lisp (clos-style-warning, clos-novice-warning)
	(class-obsolescence-warning): add
	(gf-already-called-warning, gf-replacing-method-warning): inherit
	from CLOS-STYLE-WARNING, not CLOS-WARNING
	* init.lisp, clos-package.lisp (clos-style-warning)
	(clos-novice-warning, class-obsolescence-warning): export
	* clos-class3.lisp (defclass):
	the novice warning is now of type CLOS-NOVICE-WARNING;
	drop the weird non-standard :DEFAULT-INITARGS cleanup and warning
	(make-instances-obsolete-<semi-standard-class>-nonrecursive):
	obsolescence warnings are now of type CLASS-OBSOLESCENCE-WARNING
	* clos-genfun2b.lisp (std-add-method): do not use
	WARN-IF-GF-ALREADY-CALLED, mention the method in the warnings message
	(std-remove-method): do not use GF-ALREADY-CALLED-WARNING,
	one warning instead of two
	(gf-already-called-warning, warn-if-gf-already-called): remove
	* clos-genfun3.lisp (ensure-generic-function-using-class-<t>):
	do not call WARN-IF-GF-ALREADY-CALLED
